Spacing fix

--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -91,7 +91,10 @@ main {
         padding-top: 1em; 
     }
     h3 {
-        margin-top: 2.5em;
+        margin-top: 1em;
+        @include media-breakpoint-up(md) {
+            margin-top: 2.5em;
+        }
     }
     h3.tools-header {
         margin-top: unset;
